navbar overlap fix

--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -2,7 +2,9 @@
 $hamburger-layer-color:white;
 @import '~hamburgers/_sass/hamburgers/hamburgers.scss';
 
-
+:host{
+  font-family: 'Muli';
+}
 svg {
     width: 2rem;
     padding-left: 10%;
@@ -78,6 +80,7 @@ svg {
     padding:0;
     transition: all 0.4s ease;
     visibility: hidden;
+    z-index: 2;
 }
 
 .dropdownList li{
@@ -134,15 +137,6 @@ svg {
 
 .signInOptions a{
     color: white;
-}
-
-
-
-.verticalAlign{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 100%;
 }
 
   .navContainer {
